--- a/Content/website/templates/contact.html
+++ b/Content/website/templates/contact.html
@@ -5,13 +5,12 @@
   <head>
       <title>Contact Us page</title>
       <br>
-      <br>
-      <br>
       </section>
       <section class="service">
           <h1 class="h-primary center" style="margin-top:30px;">
               Methods to contact me!
           </h1>
+          <!--Online Form-->
           <div id="service">
               <div class="contact-card">
                   <img src=
@@ -21,11 +20,12 @@
                   <p class="card-text">
                       Click this link and be redirected to inquire any questions!
                   </p>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfd86J9gr583bHGAeRxw-TtAsD4oD_JqdBmDqH9WP1IBLiPfQ/viewform?usp=sf_link" class="btn btn-primary">Fill Form</a>
+                  <a href=
+                  "https://docs.google.com/forms/d/e/1FAIpQLSfd86J9gr583bHGAeRxw-TtAsD4oD_JqdBmDqH9WP1IBLiPfQ/viewform?usp=sf_link" class="btn btn-primary">Fill Form</a>
               </div>
+             <!--Email-->
               <div class="contact-card">
-                  <img src=
-"https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png"
+                  <img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png"
                        alt="email_image">
                   <h2>Email</h2>
                   <p class="card-text">
@@ -34,9 +34,10 @@
                   <a href="mailto:eurielgg@gmail.com" class="btn btn-primary">
                     Email Us</a>
               </div>
+                <!--Phone Number-->
               <div class="contact-card">
                   <img src=
- "https://w7.pngwing.com/pngs/759/922/png-transparent-telephone-logo-iphone-telephone-call-smartphone-phone-electronics-text-trademark.png"
+                  "https://w7.pngwing.com/pngs/759/922/png-transparent-telephone-logo-iphone-telephone-call-smartphone-phone-electronics-text-trademark.png"
                   alt="phone_image">
                   <h2>Phone Number</h2>
                   <p class="card-text">
@@ -46,12 +47,6 @@
               </div>
           </div>
       </section>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
   </body>
 </html>
   </div>
