--- a/Content/website/templates/home.html
+++ b/Content/website/templates/home.html
@@ -24,7 +24,8 @@
                 </div>
             </div>
         </header>
-        <iframe class="youtube-video" width="560" height="615" src="https://www.youtube.com/embed/XceyW35RX_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="youtube-video" width="560" height="615" src="https://www.youtube.com/embed/XceyW35RX_0" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
         <!-- Features section-->
         <section class="py-5">
@@ -48,6 +49,7 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
                             </h>
                         </div>
         </section>
+        <!--feature section-->
         <section class="py-5" id="features">
             <div class="container px-5 my-5">
                 <div class="row gx-5">
@@ -81,14 +83,15 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
                 </div>
             </div>
         </div>
-        <!-- Blog preview section-->
+        <!-- Tutorial Section-->
         <section class="py-5">
             <div class="container px-5 my-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-8 col-xl-6">
                         <div class="text-center">
                             <h2 class="fw-bolder">Tutorials</h2>
-                            <p class="lead fw-normal text-muted mb-5">Login to learn how to create certain effects within Adobe Premiere Pro, will require plugins such as Magic Bullet, Sapphire and BCC
+                            <p class="lead fw-normal text-muted mb-5">Login to learn how to create certain effects within Adobe Premiere Pro, 
+                                will require plugins such as Magic Bullet, Sapphire and BCC
                             </p>
                         </div>
                     </div>
@@ -117,7 +120,7 @@ Whether you're a beginner or an experienced video editor, Adobe Premiere Pro off
                     </div>
                     <div class="col-lg-4 mb-5">
                         <div class="card h-100 shadow border-0">
-                            <img class="card-img-top" src="https://i.ytimg.com/vi/DDxwWatRqm0/maxresdefault.jpg" alt="..." />
+                            <img cAlass="card-img-top" src="https://i.ytimg.com/vi/DDxwWatRqm0/maxresdefault.jpg" alt="..." />
                             <div class="card-body p-4">
                                 <div class="badge bg-primary bg-gradient rounded-pill mb-2">Premiere Pro</div>
                                 <a class="text-decoration-none link-dark stretched-link" href="#tutorials"><h5 class="card-title mb-3">Effects</h5></a>
