--- a/Content/website/templates/privacy.html
+++ b/Content/website/templates/privacy.html
@@ -3,13 +3,11 @@
 {% block content %}
 <br>
 <br>
+<!--Header-->
 <h1>Privacy</h1>
 <br>
-<br>
-<br>
-<br>
-<br>
 
+<!--Privacy Information-->
 <h5> We collect personal information from you, including information about your:
     name
     contact information
@@ -29,17 +27,13 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 </div>
     <!-- Footer-->
     <footer class="footer-custom py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; euriels edits 2023</div></div>
+                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
                 <div class="col-auto">
                     <a class="link-light small" href="/privacy">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
