--- a/Content/website/templates/terms.html
+++ b/Content/website/templates/terms.html
@@ -4,24 +4,66 @@
 <br>
 <br>
 <h1>Terms & Conditions</h1>
+<style>
+h1{
+    text-align: center;
+}
+h2{
+    text-align:center;
+}
+p{
+    text-align:center;
+}
+</style>
+<br>
+<br>
+<section>
+    <h2>1. Acceptance of Terms</h2>
+    <p>By accessing and using this website, you agree to be bound by these terms and conditions...</p>
+</section>
 
-<h5> </h5>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+<section>
+    <h2>2. Intellectual Property</h2>
+    <p>All content on this website, including text, graphics, logos, and images, is the property of Euriel Jaiden Beltran</p>
+</section>
+<section>
+    <h2>3. User Representations</h2>
+    <p>Users will have to portray themselves through a digitalised account system</p>
+</section>
+<section>
+    <h2>4. Prohibited activities</h2>
+    <p>Activities such as unauthorized access, fraud, harassment, hate speech, doxing etc. Is prohibited</p>
+</section>
+<section>
+    <h2>5. User Generated Contributions</h2>
+    <p>Users will contribute content and or materials will shape the website and will be stored.</p>
+</section>
+<section>
+    <h2>6. Third Party Websites and Content</h2>
+    <p>Website will contain links and references to third party websites and content</p>
+</section>
+<section>
+    <h2>7. Services Management</h2>
+    <p>Website is reliable, efficient due to the several plans and actions done behind the scene in order to provide a high quality experience</p>
+</section>
+<section>
+    <h2>8. Copyright Infringement </h2>
+    <p>Information within this website cannot be copied as it will lead to legal consequences.</p>
+</section>
+<section>
+    <h2>9. Term and Termination</h2>
+    <p>If users fail to follow the terms given and provided user will be terminated access to this website.</p>
+</section>
+<section>
+    <h2>10. Modifications And Interruptions</h2>
+    <p>Website may temporarily be shutdown in case of modifactions to websites integrity or functionality.</p>
+</section>
 </div>
-    <!-- Footer-->
+    <!-- Footer-->  
     <footer class="footer-custom py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; euriels edits 2023</div></div>
+                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
                 <div class="col-auto">
                     <a class="link-light small" href="/privacy">Privacy</a>
                     <span class="text-white mx-1">&middot;</span>
