--- a/Content/website/templates/tutorials.html
+++ b/Content/website/templates/tutorials.html
@@ -1,18 +1,24 @@
     <!--Extends code from base.html for a basic page-->
     {% extends "base.html" %} {% block title %}Home{% endblock %}
     {% block content %}
-    <br>
-    <br>
+    <style>
+.tutorial{
+    text-align: center;
+}
+.header{
+    text-align:center;
+}
+
+        </style>
         <title>Premiere Pro Tutorials</title>
-        
-    </head>
     <body>
-        <header>
-            <h1>Premiere Pro Tutorials</h1>
-            <p>Enhance your skills with these informative tutorials!</p>
-        </header>
         <div class="container">
             <div class="tutorial">
+            <h1>Premiere Pro Tutorials</h1>
+            <p>Enhance your skills with these informative tutorials!</p>        <div class="container">
+            <div class="tutorial">
+                <br>
+        <br>
                 <h2>Planning/Marking according to the beat</h2>
                 <p>Learn how to plan your upcoming edit by creating markers according to the beat, to improve quality for viewers </p>   
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/vUUbDXMWMRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -34,7 +40,9 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/93RMVIHQ-9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
-    </div>
+</div>
+</div>
+</div>
         </body>
         <!-- Footer-->
         <footer class="footer-custom py-4 mt-auto">
