--- a/Content/website/static/styles.css
+++ b/Content/website/static/styles.css
@@ -11012,3 +11012,10 @@ h2{
   aspect-ratio: 16 / 9;
   width: 100%;
 }
+article img{
+  height: 200px;
+  width: 200px;
+  border:2px solid #fff;
+  border-radius: 50%;
+  margin-top: 60px;
+}
