--- a/Content/website/templates/privacy.html
+++ b/Content/website/templates/privacy.html
@@ -1,10 +1,17 @@
 <!--Extends code from base.html for a basic page-->
-{% extends "base.html" %} {% block title %}Home{% endblock %}
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
 {% block content %}
+<br>
+<br>
 <br>
 <br>
 <!--Header-->
 <h1>Privacy</h1>
+<br>
+<br>
 <br>
 
 <!--Privacy Information-->
@@ -20,30 +27,29 @@
     <br>
     We keep your information for 6 months at which point we securely destroy it by erasing the data base.
     You have the right to ask for a copy of any personal information we hold about you, and to ask for it to be corrected if you think it is wrong. If you’d like to ask for a copy of your information, 
-    or to have it corrected, please contact us at 17105@my.sanctamaria.school.nz, or +64221663891, or 319 T
-    e Irirangi Drive, Flat Bush, Auckland 2016.</h5>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    or to have it corrected, please contact us at 17105@my.sanctamaria.school.nz, or +64221663891, or 319 Te Irirangi Drive, Flat Bush, Auckland 2016.</h5>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 </div>
-    <!-- Footer-->
-    <footer class="footer-custom py-4 mt-auto">
-        <div class="container px-5">
-            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
-                <div class="col-auto">
-                    <a class="link-light small" href="/privacy">Privacy</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="/terms">Terms</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="/contact">Contact</a>
-                </div>
+<!-- Footer-->
+<footer class="footer-custom py-4 mt-auto">
+    <div class="container px-5">
+        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+            <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
+            <div class="col-auto">
+                <a class="link-light small" href="/privacy">Privacy</a>
+                <span class="text-white mx-1">&middot;</span>
+                <a class="link-light small" href="/terms">Terms</a>
+                <span class="text-white mx-1">&middot;</span>
+                <a class="link-light small" href="/contact">Contact</a>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 </body>
 
-{% endblock%}
+{% endblock %}
