--- a/Content/website/static/styles.css
+++ b/Content/website/static/styles.css
@@ -11019,3 +11019,8 @@ article img{
   border-radius: 50%;
   margin-top: 60px;
 }
+.article-img{
+  height: 65px;
+  width: 65px;
+  margin: 16px;
+}
