--- a/Content/website/templates/login.html
+++ b/Content/website/templates/login.html
@@ -49,20 +49,21 @@
   <br>
 
   </form>
-  <!-- Footer-->
-  <footer class="footer-custom py-4 mt-auto">
-    <div class="container px-5">
-        <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-            <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
-            <div class="col-auto">
-                <a class="link-light small" href="/privacy">Privacy</a>
-                <span class="text-white mx-1">&middot;</span>
-                <a class="link-light small" href="/terms">Terms</a>
-                <span class="text-white mx-1">&middot;</span>
-                <a class="link-light small" href="/contact">Contact</a>
-            </div>
-        </div>
-    </div>
+ <!-- Footer-->
+ <footer class="footer-custom py-4 mt-auto">
+  <div class="container px-5">
+      <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+          <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; All About Media 2023</div></div>
+          <div class="col-auto">
+              <a class="link-light small" href="/privacy">Privacy</a>
+              <span class="text-white mx-1">&middot;</span>
+              <a class="link-light small" href="/terms">Terms</a>
+              <span class="text-white mx-1">&middot;</span>
+              <a class="link-light small" href="/contact">Contact</a>
+          </div>
+      </div>
+  </div>
 </footer>
+</body>
   {% endblock %}
   
