changed about mephoto

--- a/Content/website/templates/aboutme.html
+++ b/Content/website/templates/aboutme.html
@@ -48,11 +48,11 @@
                 <h1>about me</h1>
                 
                 <!-- Profile image -->
-                <img src="https://asset-cdn.schoology.com/system/files/imagecache/profile_reg/pictures/picture-d7aecfab4144761dc4e16884610d8423_62266575569d7.jpg?1646683509">
+                <img src="https://cdn.discordapp.com/attachments/1022053536139329626/1144188408198086766/IMG_20230429_094306_265.jpg">
                 
                 <!-- Blockquote with a personal introduction -->
                 <blockquote>
-                    I'm Euriel Jaiden Beltran, a NewZealand grown fillipino. 
+                    Hi I'm Euriel. a newzealand grown fillipino currently st 
                     <!-- ... More content ... -->
                 </blockquote>
                 
