working on user testing

--- a/Content/website/templates/aboutme.html
+++ b/Content/website/templates/aboutme.html
@@ -10,7 +10,8 @@
        margin:0px;
        padding:0px;
        box-sizing: border-box;
-       text-align: center;
+       text-align: justify;
+       text-justify: inter-word;
        color: black;
        line-height: 1.5;
        letter-spacing: 1px;
@@ -52,7 +53,10 @@
                 
                 <!-- Blockquote with a personal introduction -->
                 <blockquote>
-                    Hi I'm Euriel. a newzealand grown fillipino currently st 
+                    Hi I'm Euriel.A Newealand grown fillipino currently studying at Sancta Maria College as a year 13 student. 
+                    One of my passions is video editing and content creation especially within Adobe Premiere Pro. Thus I had 
+                    decided to share my passion with others and allow others to show off their creativity to others aswell as
+                    learn how to create certain effects within their media
                     <!-- ... More content ... -->
                 </blockquote>
                 
